subscriber/k8s/overlays/dev/deployment.tmpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: subscriber
spec:
    template:
        spec:
            containers:
                - name: subscriber
                  image: $DOCKER_IMAGE
