subscriber/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress
spec:
    rules:
        - host: localhost
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: subscriber
                        servicePort: 80
